--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1 id="teks"></h1>
 
 <script>
-  document.getElementById("teks").textContent = "halo";
+  document.getElementById("teks").textContent = "kacau";
 </script>
